--- a/monitorapp/templates/homepage.html
+++ b/monitorapp/templates/homepage.html
@@ -7,3 +7,14 @@
 <h1>Media Monitoring</h1>
 
 <h2><a href='newreview'>Write Review</a></h2>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="modal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+
+    </div>
+  </div>
+</div>
+
+<!-- Create book button -->
+<button class="create-book btn btn-primary" type="button" name="button">Create Review</button>
