--- a/monitorapp/templates/homepage.html
+++ b/monitorapp/templates/homepage.html
@@ -9,9 +9,10 @@
 </nav>
 <h4>Media Monitoring</h4>
 
-<h5><a href='newreview'>Write Review</a></h5>
+<h5><a href='newreview'>Write Review</a></h5> 
 
-<div class="modal fade" tabindex="-1" role="dialog" id="modal">
+
+<!-- <div class="modal fade" tabindex="-1" role="dialog" id="modal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
 
@@ -19,6 +20,6 @@
   </div>
 </div>
 
-<!-- Create book button -->
-<button class="create-book btn btn-success" type="button" name="button">Create Review</button>
+<!- Create book button -->
+<!-- <button class="create-book btn btn-success" type="button" name="button">Create Review</button> -->
 {% endblock %}
