--- a/monitorapp/templates/base.html
+++ b/monitorapp/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/js/jquery.bootstrap.modal.forms.js" />
     <link rel="stylesheet" type="text/js" href="/static/js/jquery-3.2.1.min.js" />
     <link rel="stylesheet" type="text/js" href="/static/js/jquery.bootstrap.modal.forms.js" />
-    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
   </head>
   <body>
